--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @font-face {
-    font-family: "RobotoRegular";
-    src: url("../fonts/robotoregular.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
+	font-family: "RobotoRegular";
+	src: url("../fonts/robotoregular.ttf") format("truetype");
+	font-style: normal;
+	font-weight: normal;
 }
 
 body {
 	padding: 0;
-	margin: 0; 
+	margin: 0;
 	font-family: 'RobotoRegular', arial;
 }
 
@@ -26,17 +26,17 @@ a {
 }
 
 @media screen and (min-width: 1000px) {
-  .row {
-	padding: 0 250px 0 250px;
-  }
+	.row {
+		padding: 0 250px 0 250px;
+	}
 }
 
 .col {
-  flex: 1 1 8%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	flex: 1 1 8%;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .col-span-12-home {
@@ -45,7 +45,7 @@ a {
 	position: relative;
 }
 
-.col-span-12-home img{
+.col-span-12-home img {
 	width: 100%;
 }
 
@@ -57,7 +57,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-  	flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 
 .start-title {
@@ -71,7 +71,7 @@ a {
 .big-number {
 	font-size: 75px;
 	color: #ff8818;
-	float: left;
+	float: right;
 }
 
 .accordion-clients-rewiews .clients-rewiews {
@@ -109,8 +109,8 @@ a {
 }
 
 @media screen and (max-width: 1000px) {
-.clients-rewiews p {
-	width: 100%;
+	.clients-rewiews p {
+		width: 100%;
 	}
 }
 
@@ -138,99 +138,99 @@ a {
 	font-weight: 700;
 	word-spacing: 0px;
 	padding: 40px;
-    display: flex;
+	display: inline-block;
 	justify-content: center;
 }
 
 .row .row, .row.nested {
-  flex: 1 1 auto;
-  margin-top: -0.5em;
+	flex: 1 1 auto;
+	margin-top: -0.5em;
 }
 
 .row.wide-fit {
-  margin-left: -10px;
-  margin-right: -10px;
+	margin-left: -10px;
+	margin-right: -10px;
 }
 
 .row.center {
-  justify-content: center;
+	justify-content: center;
 }
 
 .center .col {
-  flex-grow: 0;
-  flex-shrink: 0;
+	flex-grow: 0;
+	flex-shrink: 0;
 }
 
 .col-span-1 {
-  flex-basis: 8.3333%;
+	flex-basis: 8.3333%;
 }
 
 .col-span-2 {
-  flex-basis: 16.6666%; 
+	flex-basis: 16.6666%;
 }
 
 .col-span-3 {
-  flex-basis: 25%;
+	flex-basis: 25%;
 }
 
 .col-span-4 {
-  flex-basis: 33.3333%;
+	flex-basis: 33.3333%;
 }
 
 .col-span-5 {
-  flex-basis: 41.6666%;
+	flex-basis: 41.6666%;
 }
 
 .col-span-6 {
-  flex-basis: 50%;
-  position: relative;
+	flex-basis: 50%;
+	position: relative;
 }
 
 .col-span-7 {
-  flex-basis: 58.3333%;
+	flex-basis: 58.3333%;
 }
 
 .col-span-8 {
-  flex-basis: 66.6666%;
+	flex-basis: 66.6666%;
 }
 
 .col-span-9 {
-  flex-basis: 75%;
+	flex-basis: 75%;
 }
 
 .col-span-10 {
-  flex-basis: 83.3333%;
+	flex-basis: 83.3333%;
 }
 
 .col-span-11 {
-  flex-basis: 91.6666%;
+	flex-basis: 91.6666%;
 }
 
 .col-span-12 {
-  flex-basis: 100%;
+	flex-basis: 100%;
 }
 
 .fixed-width {
-  flex: 0 0 500px;
-  background-color: rgba(255,0,0,0.1) !important;
+	flex: 0 0 500px;
+	background-color: rgba(255,0,0,0.1) !important;
 }
 
 @media screen and (max-width: 768px) {
-  .col-span-1,
-  .col-span-2,
-  .col-span-3,
-  .col-span-4,
-  .col-span-5 {
-    flex-basis: 50%;
-  }
+	.col-span-1,
+	.col-span-2,
+	.col-span-3,
+	.col-span-4,
+	.col-span-5 {
+		flex-basis: 50%;
+	}
 
-  .nested .col {
-    flex-basis: 100%;
-  }
+	.nested .col {
+		flex-basis: 100%;
+	}
 
-  .raw {
-	padding: 0;
-  }
+	.raw {
+		padding: 0;
+	}
 }
 
 .footer {
@@ -272,34 +272,82 @@ a {
 }
 
 @media screen and (min-width: 1000px) {
-.footer {
-  background: #171717;
-  position: fixed;
-  vertical-align: middle;
-  z-index: 0;
-  bottom: 0; right: 0; left: 0;
-  height: 30vh;
-  }
+	.footer {
+		background: #171717;
+		position: fixed;
+		vertical-align: middle;
+		z-index: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		height: 30vh;
+	}
 }
 
 @media screen and (max-width: 999px) {
-.footer {
-  padding: 5rem 0;
-  background: #171717;
-  position: fixed;
-  vertical-align: middle;
-  z-index: 0;
-  bottom: 0; right: 0; left: 0;
-  height: 500px;
-  }
+	.footer {
+		padding: 5rem 0;
+		background: #171717;
+		position: fixed;
+		vertical-align: middle;
+		z-index: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		height: 500px;
+	}
+
+	.col-span-12-onelinetext {
+		display: flex;
+	}
+
+	.balloon_main, 
+	.balloon_science, 
+	.balloon_manage {
+		display: none;
+	}
+
+	.col-span-6,
+	.col-span-7,
+	.col-span-8,
+	.col-span-9,
+	.col-span-10,
+	.col-span-11 {
+		flex-basis: 100%;
+	}
+
+	.col-span-12-arrow {
+		font-size: 70px;
+	}
+
+	.col-span-12-arrow img{
+		display: none; 
+	}
+
+	.clients-rewiews h2 {
+		font-size: 50px;
+	}
+
+	.clients-rewiews h3 {
+		font-size: 30px;
+	}
+	.clients-rewiews p {
+		font-size: 30px;
+		line-height: 1.5;
+	}
+
+	.other-review-text .clients-rewiews p {
+		font-size: 50px;
+		line-height: 1.5;
+	}
 }
 
 .section {
-  position: relative;
-  background: #F7F7F7;
-  z-index: 5;
-  margin-bottom: 30vh;
-  box-shadow: 0 0 12px rgba(0,0,0,.25);
+	position: relative;
+	background: #FFF;
+	z-index: 5;
+	margin-bottom: 30vh;
+	box-shadow: 0 0 12px rgba(0,0,0,.25);
 }
 
 .header-fixed {
@@ -308,8 +356,8 @@ a {
 	height: 80px;
 	color: #000;
 	box-sizing: border-box;
-	-webkit-transition:top 0.3s;
-	transition:top 0.3s;
+	-webkit-transition: top 0.3s;
+	transition: top 0.3s;
 }
 
 .header-fixed .header-limiter {
@@ -318,7 +366,7 @@ a {
 	margin: 0 auto;
 }
 
-.header-fixed-placeholder{
+.header-fixed-placeholder {
 	height: 80px;
 	display: none;
 }
@@ -343,15 +391,15 @@ a {
 	float: right;
 }
 
-.header-fixed .header-limiter nav a{
+.header-fixed .header-limiter nav a {
 	display: inline-block;
 	padding: 0 15px;
-	text-decoration:none;
+	text-decoration: none;
 	color: #000;
 	font-weight: 500;
 }
 
-.header-fixed .header-limiter nav a:hover{
+.header-fixed .header-limiter nav a:hover {
 	opacity: 1;
 }
 
@@ -402,7 +450,7 @@ body.fixed .header-fixed .header-limiter nav {
 
 	.header-fixed .header-limiter nav {
 		line-height: 1;
-		float:none;
+		float: none;
 	}
 
 	.header-fixed .header-limiter nav a {
@@ -428,30 +476,11 @@ body.fixed .header-fixed .header-limiter nav {
 	top: -20px;
 }
 
-.balloon_manage img{
+.balloon_manage img {
 	width: 200px;
 	position: absolute;
 	right: -160px;
 	bottom: -20px;
-}
-
-@media screen and (max-width: 1000px) {
-  .balloon_main, 
-  .balloon_science, 
-  .balloon_manage {
-	display: none;
-	}
-}
-
-@media screen and (max-width: 1000px) {
-  .col-span-6,
-  .col-span-7,
-  .col-span-8,
-  .col-span-9,
-  .col-span-10,
-  .col-span-11 {
-    flex-basis: 100%;
-  }
 }
 
 .button::after, .button::before {
@@ -464,7 +493,7 @@ body.fixed .header-fixed .header-limiter nav {
 	display: inline-block;
 	padding: 10px 30px;
 	color: #FF882A;
-	transform: translate(-50%, -50%);
+	transform: translate(0%, -50%);
 	text-decoration: none;
 	font-size: 1rem;
 	transition: all 0.5s;
@@ -477,22 +506,24 @@ body.fixed .header-fixed .header-limiter nav {
 	flex-direction: column;
 	justify-content: center;
 	text-align: center;
+	margin: auto; 
+	margin-top: 50px;
 }
 
 .button::before {
- 	bottom: -5px;
- 	height: 5px;
- 	width: 220px;
- 	left: 5px;
- 	background: #FF882A;
+	bottom: -5px;
+	height: 5px;
+	width: 220px;
+	left: 5px;
+	background: #FF882A;
 }
 
 .button::after {
- 	right: -5px;
- 	height: 70px;
- 	width: 5px;
- 	bottom: -5px;
- 	background: #FF882A;
+	right: -5px;
+	height: 70px;
+	width: 5px;
+	bottom: -5px;
+	background: #FF882A;
 }
 
 .button:hover {
@@ -515,51 +546,41 @@ body.fixed .header-fixed .header-limiter nav {
 	background: #FFF;
 }
 
+.accordion {
+	background: #FFF;
+}
 
-    ul {
-      margin-bottom: 0;
-    }
-    
-    .accordion  {
-      background: #FFF;
-      border-radius: 5px;
-      padding: 30px;
-    }
+.other-review {
+	cursor: pointer;
+	position: relative;
+}
 
-    .other-review {
-      border-top: 1px solid #EEE;
-      padding: 20px;
-      cursor: pointer;
-      position: relative;
-    }
-    .other-review h2  {
-      font-size: 20px;
-      margin: 0;
-      color: #000;
-    }
-    .other-review .glyphicon {
-      position: absolute;
-      right: 20px;
-      top: 0;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      color: #000;
-      transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
+.other-review h2 {
+	margin-left: 50px; 
+}
 
-    .other-review-text   {
-      max-height: 0;
-      overflow: hidden;
-      transition: .8s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
-    .other-review-text p {
-      padding: 20px;
-    }
+.other-review .glyphicon {
+	position: absolute;
+	left: 0px;
+	top: 0;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	color: #000;
+	transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+	font-size: 50px;
+}
 
-    .accordion li.open .other-review .glyphicon {
-      transform: rotate(180deg);
-    }
-    .accordion li.open .other-review-text  {
-      max-height: 150px;
-    }
+.other-review-text {
+	max-height: 0;
+	overflow: hidden;
+	transition: .8s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+}
+
+.accordion li.open .other-review .glyphicon {
+	transform: rotate(180deg);
+}
+
+.accordion li.open .other-review-text {
+	max-height: 500px;
+}
