--- a/style.css
+++ b/style.css
@@ -9,6 +9,21 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: 'RobotoRegular', arial;
+	overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;              
+}
+
+body::-webkit-scrollbar-track {
+  background: #FFF;       
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #ff8818;    
+  border-radius: 20px;       
+  border: 3px solid orange;  
 }
 
 ul li {
