--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ a {
 	height: 80vh;
 	cursor: pointer;
 	position: relative;
+	overflow: hidden;
 }
 
 .col-span-12-home img {
@@ -73,6 +74,60 @@ a {
 	flex-direction: column;
 	justify-content: space-around;
 	flex-wrap: wrap;
+}
+
+.col-span-12-arrow img {
+	width: 50px;
+	position: absolute;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, 0%);
+
+    -webkit-animation-name: arrow__animation;
+    -webkit-animation-duration: 5s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    -moz-animation-name: arrow__animation;
+    -moz-animation-duration: 5s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+
+    -o-animation-name: arrow__animation;
+    -o-animation-duration: 5s;
+    -o-animation-iteration-count: infinite;
+    -o-animation-timing-function: linear;
+    
+    animation-name: arrow__animation;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+ }
+
+ @keyframes arrow__animation {
+    0% {
+    transform: translate(0%, 20%);
+	-webkit-transform: translate(0%, 20%);
+	-moz-transform: translate(0%, 20%);
+	o-transform: translate(0%, 20%);
+	transform: translate(0%, 20%);
+    }  
+
+    50% {
+    transform: translate(0%, 0%);
+	-webkit-transform: translate(0%, 0%);
+	-moz-transform: translate(0%, 0%);
+	o-transform: translate(0%, 0%);
+	transform: translate(0%, 0%);
+    }
+
+    100% {
+    transform: translate(0%, 20%);
+	-webkit-transform: translate(0%, 20%);
+	-moz-transform: translate(0%, 20%);
+	o-transform: translate50%, 20%);
+	transform: translate(0%, 20%);
+    }
 }
 
 .start-title {
@@ -598,4 +653,75 @@ body.fixed .header-fixed .header-limiter nav {
 
 .accordion li.open .other-review-text {
 	max-height: 500px;
+}
+
+.active-plane {
+	position: absolute;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, 0%);
+	top: 0;
+	width: 50%;
+
+    -webkit-animation-name: plane__flight__animation;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    -moz-animation-name: plane__flight__animation;
+    -moz-animation-duration: 10s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+
+    -o-animation-name: plane__flight__animation;
+    -o-animation-duration: 10s;
+    -o-animation-iteration-count: infinite;
+    -o-animation-timing-function: linear;
+
+    animation-name: plane__flight__animation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes plane__flight__animation {
+    0% {
+    transform: translate(-50%, 0%);
+	-webkit-transform: translate(-50%, 0%);
+	-moz-transform: translate(-50%, 0%);
+	o-transform: translate(-50%, 0%);
+	transform: translate(-50%, 0%);
+    opacity: 1;
+    }  
+
+    50% {
+    transform: translate(100%, 0%);
+	-webkit-transform: translate(100%, 0%);
+	-moz-transform: translate(100%, 0%);
+	o-transform: translate(100%, 0%);
+	transform: translate(100%, 0%);
+    opacity: 1;
+    }
+
+    50.2% {
+    opacity: 0;
+    }
+
+    55% {
+    transform: translate(-200%, 0%);
+    opacity: 0;
+    }
+
+    56% {
+    opacity: 1;
+    }
+
+    100% {
+    transform: translate(-50%, 0%);
+	-webkit-transform: translate(-50%, 0%);
+	-moz-transform: translate(-50%, 0%);
+	o-transform: translate(-50%, 0%);
+	transform: translate(-50%, 0%);
+    opacity: 1;
+    }
 }
